# scraper-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  config.toml  deploy-to-dokploy.sh  docker-compose.yml
.github/workflows/: deploy.yml
admin/: dist  nuxt.config.ts  package-lock.json  package.json
admin/composables/: useAdminToken.ts
admin/layouts/: default.vue
admin/middleware/: auth.ts
admin/pages/: index.vue  login.vue  logs.vue  results.vue  searches.vue  users.vue
data/: e2e_report_20260421_071944.md  e2e_report_20260421_072334.md  e2e_report_20260421_072642.md  e2e_report_20260421_072837.md  e2e_report_20260422_065137.md
migrations/: 001_initial.sql  002_url_profiles.sql  003_scrapers_and_alerts.sql  004_filters.sql  005_api_keys.sql
src/: api.rs  auto_learn.rs  config.rs  db.rs  lib.rs  main.rs  tests.rs  webhook.rs  wizard.rs
src/api/: admin.rs  auth.rs  handlers.rs  mod.rs  rate_limit.rs
src/filters/: mod.rs
src/handlers/: mod.rs
src/models/: mod.rs
src/payments/: mod.rs
src/scheduler/: mod.rs
src/scraper/: boc_canarias.rs  bocyl.rs  boe.rs  borm.rs  caib.rs  contratacion_estado.rs  doe.rs  generic.rs  mod.rs
templates/rust-http-app/: .env.example  Dockerfile  README.md  docker-compose.yml
