[package]
name = "scraper-bot"
version = "0.1.0"
edition = "2021"

[lib]
name = "scraper_bot"
path = "src/lib.rs"

[[bin]]
name = "scraper-bot"
path = "src/main.rs"

[[bin]]
name = "e2e_report"
path = "src/bin/e2e_report.rs"

[dependencies]
tokio = { version = "1.35", features = ["full", "rt-multi-thread"] }
teloxide = { version = "0.12", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
reqwest = { version = "0.11", features = ["json", "cookies"] }
scraper = "0.19"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenv = "0.15"
regex = "1.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-stripe = { version = "0.39", features = ["runtime-tokio-hyper"] }
url = "2.5"
http = "0.2"
once_cell = "1.19"
dashmap = "5.5"
cron = "0.12"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
rss = "2.0"
quick-xml = "0.31"
chromiumoxide = "0.9"
futures = "0.3"
futures-util = "0.3"

[dev-dependencies]
tokio-test = "0.4"
